Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-02-23 (SVN):
    * w32stuff/codecs: update libmpg123 header, import libraries and dlls
      to version 1.13.2.

2011-02-21 (SVN):
    * snd_mix.c, minor cleanup: eliminated stupid multiple casting in
      SND_PaintChannelFrom8(), added braces to the inner for loop in
      SND_InitScaletable().

2011-02-21 (SVN):
    * Updated windows README file for the 1.11 patch web links.

2011-02-21 (SVN):
    * Updated 1.5.0 release notes file.

2011-02-18 (SVN):
    * utils/common/util_io.c:  ported several platform-specific file io
      changes from game engine to the utilities and added a few new procs.
      added dos-specific procs. updated the callers of modified functions
      accordingly.

2011-02-17 (SVN):
    * Updated 1.5.0 release notes file. Changed beta version date stamp
      to 2011-02-17.

2011-02-17 (SVN):
    * snd_mpg123.c: Print a message if mpg123_init() fails.

2011-02-17 (SVN):
    * README.music: update the document for the -noextmusic command line
      option and the bgm_extmusic cvar.

2011-02-17 (SVN):
    * model.c, gl_model.c: changed the `ignored' messages from Con_DPrintf
      to Con_Printf for external lit and ent files.

2011-02-16 (SVN):
    * bgmusic.c: small updates and tidy-ups.

2011-02-16 (SVN):
    * w32stuff/codecs: add libmpg123 header, import libraries and dlls
      for windows builds in case they use libmpg123 for mp3 support.
    * w32stuff/dxsdk: update _mingw_dxhelper.h from mingw-w64 svn repo.

2011-02-16 (SVN):
    * bgmusic.c: drop support for track<nn> music file search. change the
      music file search method to prioritize searchpath order as opposed
      to preferred file format order. add support for -noextmusic command
      line option and bgm_extmusic cvar from quakespasm.
    * bgmusic.h: add an extern for bgm_extmusic.
    * README.music: update the document after these changes.

2011-02-16 (SVN):